Finish About + Projects + Axioms pages; update README

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/wl-icon-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-react</title>
+    <title>Wayne Lassen | Portfolio</title>
+    <meta
+      name="title"
+      content="Wayne Lassen - portfolio showcasing React, Redux Toolkit, routing, and practical engineering projects."
+    />
   </head>
   <body>
     <div id="root"></div>
